// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//edition = "2023";
syntax = "proto3";
import "proto/any.proto";
//option features.field_presence = IMPLICIT;
option go_package = "github.com/iznilul/track_rpc";
//option java_multiple_files = true;
//option java_package = "io.grpc.examples.routeguide";
//option java_outer_classname = "RouteGuideProto";
//protoc  --go_out=. --go_opt=paths=source_relative     --go-grpc_out=. --go-grpc_opt=paths=source_relative     proto/track/track-rpc.proto

package trpc;

// Interface exported by the server.
service TrackRPC {
  rpc QueryFieldList (RequestAO) returns (ResponseVO) {}
  rpc SendSyncRequest (RequestAO) returns (ResponseVO) {}
  rpc FindStationList (RequestAO) returns (ResponseVO) {}
  rpc FindOngoingTrackList (RequestAO) returns (ResponseVO) {}
  rpc FinishTrack (RequestAO) returns (ResponseVO) {}
  rpc FindHistoryTrackList (RequestAO) returns (ResponseVO) {}
  rpc SyncTrack (RequestAO) returns (ResponseVO) {}
  rpc FindContentNoListBySerialNumberList (RequestAO) returns (ResponseVO) {}
  rpc QueryDataInTimeScope(RequestAO) returns (ResponseVO) {}
}

message NoParam {
}

message ContentNoAO {
  string contentNo = 1;
}

message SyncAO {
  repeated string contentNoList = 1;
  string startStation = 2;
  string startStationName = 3;
  string endStation = 4;
  string endStationName = 5;
  string serialNumber = 6;
}

message QueryAO {
  string table = 1;
  string field = 2;
  string value = 3;
}

message FindStationAO {
  string value = 1;
  int32 currentPage = 2;
  int32 pageSize = 3;
}

message RequestAO {
  google.protobuf.Any data = 1;
  repeated google.protobuf.Any dataList = 2;
  google.protobuf.Any map = 3;
  repeated google.protobuf.Any mapList = 4;
}

message ResponseVO {
  int32 code = 1;
  string msg = 2;
  //  google.protobuf.Any data = 3;
  google.protobuf.Any data = 3;
  repeated google.protobuf.Any dataList = 4;
  google.protobuf.Any map = 5;
  repeated google.protobuf.Any mapList = 6;
}

message KeyValue {
  string key = 1;
  google.protobuf.Any value = 2;
}